--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
     <meta http-equiv="origin-trial" content="" />
   </head>
+    <style>
+    body {
+       background-color: rgb(167, 173, 177);
+    }
+  </style>
   <body>
     <main>
       <div id="landing">
