--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
     body {
        background-color: rgb(167, 173, 177);
+       background-image: url("https://zoom.us/account/branding/p/b7f37763-6dee-4be3-8c55-cda5ba5c7310.gif");
     }
   </style>
   <body>
