--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Video SDK JS 18ten</title>
+    <title>Video SDK JS 182</title>
     <link rel="stylesheet" href="styles.css">
     <meta http-equiv="origin-trial" content="" />
   </head>
