--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <main>
       <div id="landing">
-        <h2> Video WebSDK Chat 💬</h2>
+        <h2> Video WebSDK 182 💬</h2>
         <small id="error">Session full, join another.</small>
         <input type="text" placeholder="😃 Enter Name" id="userName">
         <input type="text" placeholder="🚪 Session Name" id="sessionName">
@@ -50,7 +50,7 @@
       </div>
     </main>
 
-    <script src="https://source.zoom.us/videosdk/zoom-video-1.8.0.min.js"></script>
+    <script src="https://source.zoom.us/videosdk/zoom-video-1.8.2.min.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 </html>
