--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="session">
         <div class="self">
           <h3 id="self-view-name">😃 Me</h3>
-          <video id="self-view-video" width="1920" height="1080"></video>
+         // <video id="self-view-video" width="1920" height="1080"></video> //
           <canvas id="self-view-canvas" width="1920" height="1080"></canvas>
         </div>
         <div class="participant">
