--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="self">
           <h3 id="self-view-name">😃 Me</h3>
          // <video id="self-view-video" width="1920" height="1080"></video> //
+          <canvas id="self-view-canvas" width="1920" height="1080" style="display:none;"></canvas>
           <canvas id="self-view-canvas" width="1920" height="1080"></canvas>
         </div>
         <div class="participant">
