--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
     }
 
     #session {
@@ -44,7 +44,14 @@
       padding: 2px 8px;
       border-radius: 6px;
       font-size: 14px;
-      pointer-events: none;
+      z-index: 10;
+    }
+
+    input {
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: none;
+      margin: 4px;
     }
 
     button {
@@ -55,25 +62,15 @@
       color: white;
       cursor: pointer;
       font-weight: bold;
-      margin: 0 4px;
+      margin: 4px;
     }
 
     button:disabled {
       background: #555;
-      cursor: not-allowed;
-    }
-
-    input {
-      padding: 6px 10px;
-      border-radius: 6px;
-      border: none;
-      margin: 0 4px 8px 0;
     }
   </style>
 </head>
-
 <body>
-  <!-- Landing / Join form -->
   <div id="landing">
     <h2>Join Zoom Video SDK Session</h2>
     <input id="sessionName" placeholder="Session Name" />
@@ -83,7 +80,6 @@
     <p id="error" style="display:none;color:red;">Session full or error joining.</p>
   </div>
 
-  <!-- Session UI -->
   <div id="session">
     <div class="video-container" id="self-view-container">
       <div id="self-view-name">Self View</div>
@@ -105,18 +101,7 @@
 
   <!-- Zoom Video SDK -->
   <script src="https://source.zoom.us/videosdk/2.2.12/lib.js"></script>
-  <!-- Your updated JS -->
+  <!-- Your JS -->
   <script src="./scripts.js"></script>
-
-  <script>
-    // Assign button click handlers (from updated scripts.js)
-    document.getElementById('getSignature').onclick = getSignature;
-    document.getElementById('startVideo').onclick = startVideo;
-    document.getElementById('stopVideo').onclick = stopVideo;
-    document.getElementById('startAudio').onclick = startAudio;
-    document.getElementById('muteAudio').onclick = muteAudio;
-    document.getElementById('unmuteAudio').onclick = unmuteAudio;
-    document.getElementById('leave').onclick = leaveSession;
-  </script>
 </body>
 </html>
